--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,20 +10,9 @@ updates:
     directory: "/"
 
     schedule:
-      interval: "weekly"
-      day: "sunday"
+      interval: "daily"
       time: "04:00"
       timezone: "Europe/Berlin"
-
-    groups:
-      security-updates:
-        applies-to: "security-updates"
-        patterns:
-          - "*"
-      version-updates:
-        applies-to: "version-updates"
-        patterns:
-          - "*"
 
     open-pull-requests-limit: 10
 
@@ -44,30 +33,16 @@ updates:
       include: "scope"
       prefix: "npm"
 
-    # Disable rebasing for all pull requests
-    rebase-strategy: "disabled"
+    rebase-strategy: "auto"
 
   - package-ecosystem: "github-actions"
 
     directory: "/"
 
     schedule:
-      interval: "weekly"
-      day: "sunday"
+      interval: "daily"
       time: "04:00"
       timezone: "Europe/Berlin"
-
-    groups:
-      # Specify a name for the group, which will be used in pull request titles
-      # and branch names
-      security-updates:
-        applies-to: "security-updates"
-        patterns:
-          - "*"
-      version-updates:
-        applies-to: "version-updates"
-        patterns:
-          - "*"
 
     open-pull-requests-limit: 10
 
@@ -88,5 +63,4 @@ updates:
     ignore:
       - dependency-name: "mimmi20/ci"
 
-    # Disable rebasing for all pull requests
-    rebase-strategy: "disabled"
+    rebase-strategy: "auto"
