--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "extends": "eslint-config-postcss"
   },
   "engines": {
-    "node": ">=8.3.0"
+    "node": "^20.19.0 || ^22.12.0 || >=23.1.0"
   },
   "files": [
     "index.js",
